# rookies-3

./: .gitattributes  .gitignore  0RAG_Pipline_Basic.ipynb  11-1_LangChain_ToolCalling_Groq.ipynb  11_LangChain_ToolCalling.ipynb  12_LangGraph_StateGraph.ipynb  13_LangGraph_MessageGraph.ipynb  14_LangGraph_ReAct_Memory.ipynb  15_LangGraph_AgenticRAG.ipynb  1RAG_Pipline_Loader.ipynb  21-2Agent_analysis_enhanced.py  22-1Agent_analysis_titanic.ipynb  23multi_agent_crypto.ipynb  23multi_agent_crypto.py  2RAG_Pipeline_Splitter.ipynb  3RAG_Pipeline_Embeddings.ipynb  4RAG_Pipeline_Vector_Faiss.ipynb  5RAG_Pipline_WebBaseLoader.ipynb  6RAG_Pipline_DocxLoader.ipynb  7Ollama_Model연동.ipynb  7ollama-rag-ver2.py  7ollama-rag.py  8LangGraph_Basic.ipynb  GPT_llm연동.ipynb  Google_llm연동.ipynb  README.md  Upsate_llm연동.ipynb  chatbot0_그라디오Basic.ipynb  chatbot1_그라디오 챗봇 시작하기.ipynb  chatbot2_OpenAI API(텍스트 완성) 사용해보기.ipynb  chatbot3_OpenAI API(텍스트 완성)와 그라디오 챗봇 연동하기.ipynb  chatbot4_LangChain과 그라디오 챗봇 연동하기.ipynb  chatbot5_LangChain의ChatOpenAI와 그라디오 챗봇 연동.ipynb  chatbot6_PDF 파일기반 질의응답 챗봇_Faiss.ipynb  groq_llm연동.ipynb  groq_llm연동_Model_Parameter.ipynb  groq_llm연동_OutputPerser.ipynb  groq_llm연동_PromptTemplate.ipynb  pyproject.toml  rookies_question.ipynb
data/: ai_technologies.csv  cafe_menu.txt  cafe_menu_data.txt  korea_기업.csv  korea_부산에서 맛있는 맛집.csv  korea_음식.csv  tax_with_table_short.docx  연습문제2-1_NVIDA 판매율.csv  연습문제2-1_기아자동차 판매율 순위.csv  연습문제2-1_부산 맛집.csv  연습문제2-1_현대자동차 판매율 순위.csv
연습문제 답지/: problem1-1_solution.ipynb  problem1-2_solution.ipynb  problem1-3_solution.ipynb  problem2_solution.ipynb  problem3_solution.ipynb  problem3_설명.md  problem4_solution.ipynb  problem5-1_solution.ipynb  problem5-2_solution.ipynb  problem6-1_solution.ipynb  problem6-2_solution.ipynb
홍영준 연습문제/: Rookies 연습문제3번 test용.ipynb  few_shot_prompt.py  rookies_question1~2번.ipynb  test deepseek.ipynb  test gpt.ipynb  test.ipynb  test1.ipynb  ㄴㄴ.ipynb  연습문제3번(최종).ipynb  연습문제4.ipynb  연습문제5.ipynb  연습문제7.ipynb
(+3 files in other folders)
